@@ -1,5 +1,6 @@
 == master
 
+* Fix multiple machines not being able to target the same attribute if all possible states aren't defined in each
 * Fix ActiveModel / DataMapper integrations not overriding StateMachine::Machine#after_initialize properly
 * Improve documentation for overriding states and integration transactions
 
